--- a/src/main/resources/assets/testmod1/lang/de_de.json
+++ b/src/main/resources/assets/testmod1/lang/de_de.json
@@ -1,4 +1,5 @@
 {
-  "item.testmod1.black_opal": "schwarzer Opal"
+  "item.testmod1.black_opal": "schwarzer Opal",
+  "item.testmod1.raw_black_opal": "roher schwarzer Opal"
   //item:Minecraftname
 }
